tests/reference/asr-template_error_09-8d590f9.stderr
semantic error: Function already have result variable set
 --> tests/errors/template_error_09.f90:7:50
  |
7 |         pure elemental function bin(x, y) result(bin)
  |                                                  ^^^ 
